# mongo-events-demo

./: .env.example  .gitignore  DATABASE_DESIGN.md  Dockerfile  EVE-5_REPORT.md  PROJECT_STRUCTURE.md  README.md  cleanup_and_regenerate.py  docker-compose-homelab.yml  docker-compose.yml  generate_test_data.py  insert_test_data.py  map_test_events.json  package-lock.json  pyproject.toml  quickstart.sh  requirements.txt  run.py  test_atlas_connection.py  test_checkins.json  test_checkins_standalone.py  test_indexes.py  test_nearby_api.py  test_performance.py  test_simple_atlas.py  test_tickets.json  test_users.json  test_venues.json
EventSphere_664870797/: PROJECT_STATUS.md  README.md  TO-DO.md
app/: README.md  __init__.py  config.py  database.py  geocoding.py  models.py  realtime.py  schema_validation.py  services.py  utils.py
data/: generate_sample_data.py
docs/: EVE-37_COMPLETION_SUMMARY.md  MONGODB_ATLAS_SETUP.md  course-report.md  linear-plan.md  project-plan.md  project-proposal copy.md
eventdb/: README.md  __init__.py  app.py  config.py  models.py  requirements.txt  run.py
scripts/: fix_datetime_utcnow.py
tests/: README.md  __init__.py  run_essential_tests.py  run_eve12_test.py  test_app.py  test_comprehensive_camelcase.py  test_enhanced_checkins.py  test_eve10_weekend_window.py  test_eve11_nearby_api.py  test_eve12_weekend_api.py  test_eve13_category_geo_compound.py  test_eve38_geocoding.py  test_eve5_eve7_schema_crud.py  test_eve6_indexes.py  test_eve8_text_search.py  test_eve9_cursor_pagination.py  test_eve9_cursor_with_data.py  test_performance.py  (+1 more)
(+91 files in other folders)
